# ECS

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/ecs/: ecs.c  ecs.h  utils.c  utils.h
